// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should have a disabled state 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  font-size: 18px;
  color: #FFF;
  background-color: #004A7C;
  border: none;
  border-radius: 5px;
  cursor: not-allowed;
  outline: none;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  opacity: 0.5;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
}

.c0:hover {
  background-color: #0068af;
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <ContainedButton
    disabled={true}
    nature="primary"
    type="button"
  >
    <styled.button
      backgroundColor="orient"
      color="white"
      disabled={true}
      type="button"
    >
      <button
        className="c0"
        color="white"
        disabled={true}
        type="button"
      />
    </styled.button>
  </ContainedButton>
</ThemeProvider>
`;

exports[`Button should have a secondary style 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  font-size: 18px;
  color: #FFF;
  background-color: #10ADE4;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  outline: none;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
}

.c0:hover {
  background-color: #36c0f1;
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <ContainedButton
    disabled={false}
    nature="secondary"
    type="button"
  >
    <styled.button
      backgroundColor="cerulean"
      color="white"
      disabled={false}
      type="button"
    >
      <button
        className="c0"
        color="white"
        disabled={false}
        type="button"
      />
    </styled.button>
  </ContainedButton>
</ThemeProvider>
`;

exports[`Button should have a type property 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  font-size: 18px;
  color: #FFF;
  background-color: #004A7C;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  outline: none;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
}

.c0:hover {
  background-color: #0068af;
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <ContainedButton
    disabled={false}
    nature="primary"
    type="submit"
  >
    <styled.button
      backgroundColor="orient"
      color="white"
      disabled={false}
      type="submit"
    >
      <button
        className="c0"
        color="white"
        disabled={false}
        type="submit"
      />
    </styled.button>
  </ContainedButton>
</ThemeProvider>
`;

exports[`Button should have a type property 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  font-size: 18px;
  color: #FFF;
  background-color: #004A7C;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  outline: none;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
}

.c0:hover {
  background-color: #0068af;
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <ContainedButton
    disabled={false}
    nature="primary"
    type="reset"
  >
    <styled.button
      backgroundColor="orient"
      color="white"
      disabled={false}
      type="reset"
    >
      <button
        className="c0"
        color="white"
        disabled={false}
        type="reset"
      />
    </styled.button>
  </ContainedButton>
</ThemeProvider>
`;

exports[`Button should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  font-size: 18px;
  color: #FFF;
  background-color: #004A7C;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  outline: none;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
}

.c0:hover {
  background-color: #0068af;
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <ContainedButton
    disabled={false}
    nature="primary"
    type="button"
  >
    <styled.button
      backgroundColor="orient"
      color="white"
      disabled={false}
      type="button"
    >
      <button
        className="c0"
        color="white"
        disabled={false}
        type="button"
      />
    </styled.button>
  </ContainedButton>
</ThemeProvider>
`;
